# tower-a2a

./: Cargo.toml  README.md
docs/spec/: latest.md  v0.3.0.md
examples/: simple_client.rs
src/: lib.rs
src/client/: agent.rs  builder.rs  config.rs  mod.rs
src/codec/: json.rs  jsonrpc.rs  mod.rs  sse.rs
src/layer/: auth.rs  mod.rs  validation.rs
src/protocol/: agent.rs  error.rs  message.rs  mod.rs  operation.rs  task.rs
src/service/: core.rs  mod.rs  request.rs  response.rs
src/transport/: http.rs  mock.rs  mod.rs  websocket.rs
tests/: spec_compliance.rs
