[package]
name = "tower-a2a"
version = "1.0.0"
description = "A Tower middleware layer for the A2A Protocol"
repository = "https://github.com/datathreads/tower-a2a.git"
authors = ["Devdutt Shenoi <devdutt@datathreads.ai>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Tower ecosystem
tower = { version = "0.5", features = ["full"] }
tower-service = "0.3"
tower-layer = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.11"

# HTTP transport
hyper = { version = "1.8", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
url = { version = "2.5", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Encoding
base64 = "0.22.1"

# UUID generation
uuid = { version = "1.0", features = ["v7", "serde"] }

# SSE streaming
eventsource-stream = "0.2"

# WebSocket support
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
